--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -18,6 +18,13 @@
 .border-dash {
   border-top: 1px dashed rgb(206, 206, 206);
 }
+.arrow {
+  font-size:14px;
+  color: rgb(197, 197, 197);
+}
+.cursor-pointer {
+  cursor: pointer;
+}
 .header-container {
   background-color: #fff;
   padding: 0.5rem;
@@ -31,31 +38,38 @@
   }
   .button-area {
     .btn-ce {
-      padding:3px 5px;
+      padding: 3px 5px;
       border-radius: 3px;
       // width: 80px;
       &--primary {
         background-color: rgb(230, 89, 7);
-        color:#fff;
+        color: #fff;
       }
-      &--submit {
-        background-color:rgb(42, 134, 5);
-        color:#fff;
+      &--submit,&--generate {
+        background-color: rgb(42, 134, 5);
+        color: #fff;
+      }
+      &--approve {
+        background-color: rgb(31, 88, 8);
+        color: #fff;
       }
       &--cancel {
-        background-color:rgb(202, 202, 202);
+        background-color: rgb(202, 202, 202);
       }
     }
   }
 }
 .content-area {
   background-color: #fff;
-  height:100vh;
-  margin:1.5rem 2rem;
+  min-height: 100vh;
+  height: 100%;
+  margin: 1.5rem 2rem;
   .filter-area {
     .filter-block {
       label {
         font-weight: bold;
+        min-width: 10rem;
+        text-align: left;
       }
       .form-control {
         min-width: 10rem;
@@ -63,16 +77,16 @@
     }
     .filter-button-area {
       .btn-ce {
-        padding:3px 5px;
+        padding: 3px 5px;
         border-radius: 2px;
-        width:80px;
+        width: 80px;
         &--filter {
           background-color: rgb(2, 124, 28);
-          color:#fff;
+          color: #fff;
         }
         &--clear {
           background-color: rgb(221, 221, 221);
-          color:rgb(24, 23, 23);
+          color: rgb(24, 23, 23);
         }
       }
     }
@@ -84,40 +98,60 @@
       }
       .eva-status {
         width: 120px;
-        padding:3px 4px;
+        padding: 3px 4px;
         border-radius: 2px;
         font-weight: bold;
         &--new {
-          background-color: #F29D18;
-          color:#fff;
+          background-color: #f29d18;
+          color: #fff;
         }
         &--evaluated {
-          background-color: #D7F7D6;
-          color:#000;
+          background-color: #d7f7d6;
+          color: #000;
         }
         &--waiting {
-          background-color: #73A1EA;
-          color:#fff;
+          background-color: #73a1ea;
+          color: #fff;
         }
         &--approved {
-          background-color: #388B59;
-          color:#fff;
+          background-color: #388b59;
+          color: #fff;
+        }
+      }
+      .assoicate-role {
+        width: 120px;
+        padding: 3px 4px;
+        border-radius: 2px;
+        font-weight: bold;
+        &--manager {
+          background-color: #037ec5;
+          color: #fff;
+        }
+        &--member {
+          background-color: #aaaaaa;
+          color: #000;
         }
       }
       .table-icon {
         &--view {
-          color:#f1870d
+          color: #f1870d;
+        }
+        &--review {
+          color: #1f48ce;
+        }
+        &--info {
+          color: #c0c0c0;
         }
       }
     }
   }
 }
-.vm--modal{
-  min-height: 450px !important;
+.vm--modal {
+  height: 450px !important;
   padding: 1.5rem 2rem !important;
 }
 .container-modal {
-  .title{
+  .title {
     font-size: 20px;
   }
   .filter-block {
@@ -132,12 +166,56 @@
     border: 1px solid rgb(42, 134, 5);
     width: 80px;
     &--ok {
-      background-color:rgb(42, 134, 5);
-      color:#fff;
+      background-color: rgb(42, 134, 5);
+      color: #fff;
     }
     &--cancel {
-      background-color:rgb(235, 235, 235);
+      background-color: rgb(235, 235, 235);
       color: rgb(42, 134, 5);
     }
   }
+}
+
+.vue-numeric-input {
+  input {
+    text-align: center !important;
+  }
+  .btn-decrement {
+    left: 0px !important;
+    top: 1px !important;
+    bottom: 0px !important;
+    .btn-icon {
+      top: -2px !important;
+    }
+  }
+  .btn-increment {
+    right: 0px !important;
+    top: 1px !important;
+    bottom: 0px !important;
+    .btn-icon {
+      top: -2px !important;
+    }
+  }
+}
+.vm--modal {
+  height:450px !important;
+}
+.btn-generate {
+  padding: 3px 5px;
+  border-radius: 3px;
+  background-color: rgb(42, 134, 5);
+  color: #fff;
+}
+.note {
+  color: rgb(230, 11, 11);
+}
+
+.required:after {
+  content: '*';
+  color: red;
+  font-style: italic;
+}
+
+.invalid-select { 
+  border: 1px solid red !important;
 }
