--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -139,6 +139,9 @@
         &--review {
           color: #1f48ce;
         }
+        &--delete {
+          color: #d30c0c;
+        }
         &--info {
           color: #c0c0c0;
         }
